<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mastermind</string>
    <string name="welcome_message">Welcome to Mastermind!</string>
    <string name="question_correct_guess">Was the guess correct?</string>
    <string name="colour_picker_title">Colour Picker</string>
    <string name="button_guess">Guess</string>
    <string name="new_game">New game</string>
    <string name="settings">Settings</string>
    <string name="pref_codeLength">Code length</string>
    <string name="pref_codeLength_default">4</string>
    <string name="pref_numberOfColours_default">6</string>
    <string name="congratulations">Congratulations, you won!</string>
    <string name="game_over">Sorry, you lost</string>
    <string name="pref_numberOfColours">Number of colours</string>
    <string name="mastermind">Mastermind</string>
    <string name="challenge_computer">Challenge the computer!</string>
    <string name="think_of_a_code">Think of a code (check the settings for code length and valid colours)</string>
    <string name="button_alert_feedback">Alert feedback</string>
    <string name="computer_player_won">Computer player won!</string>
    <string name="invalid_feedback">Invalid feedback must have been given as there are no possibilities available!
    </string>
</resources>
